force-app/main/default/objects/QTB_Tax_Integration_Setting__mdt/QTB_Tax_Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This is to control the Integration with respect to system and Country</description>
    <label>Tax Integration Setting</label>
    <pluralLabel>Tax Integration Settings</pluralLabel>
</CustomObject>