force-app/main/default/objects/QTB_Tax_Integration_Setting__mdt/fields/QTB_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Country__c</fullName>
    <inlineHelpText>Countries to keep &apos;;&apos; separated</inlineHelpText>
    <label>Country</label>
    <length>250</length>
    <type>Text</type>
</CustomField>