force-app/main/default/objects/QTB_Tax_Integration_Setting__mdt/fields/QTB_End_System__c.field-meta.xml
<CustomField>
    <fullName>QTB_End_System__c</fullName>
    <inlineHelpText>Integration system Name</inlineHelpText>
    <label>End System</label>
    <length>250</length>
    <type>Text</type>
</CustomField>