force-app/main/default/objects/QTB_Tax_Integration_Setting__mdt/fields/QTB_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>QTB_Product_Line__c</fullName>
    <label>Product Line</label>
    <length>250</length>
    <type>Text</type>
</CustomField>